@@ -4,6 +4,9 @@ Revision history for Perl extension ExtUtils::CBuilder.
    supposed to be linking with a shared perl library or not. [Reini
    Urban]
 
+ - In link_executable() on Cygwin, trust $Config{ld} rather than using
+   $Config{cc} for linking. [Reini Urban]
+
 0.24 - Fri Aug 15 22:01:48 2008
 
  - Added 'gnu' and 'gnukfreebsd' as Unix variants. [Niko Tyni]
